<resources>
    <string name="app_name">Lab1</string>
    <string name="headline">中山大学学生信息系统</string>
    <string name="user">学号:</string>
    <string name="user_hint">请输入学号</string>
    <string name="pass">密码:</string>
    <string name="pass_hint">请输入密码</string>
    <string name="student">学生</string>
    <string name="teacher">教职工</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
</resources>
